# wrench

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
lexer/: Cargo.toml
lexer/src/: main.rs
parser/: Cargo.toml
parser/src/: main.rs
programs/: Benchmark.wrench  BenchmarkImport.wrench  BenchmarkNew.wrench  ComplexPipe.wrench  FunctionInFunction.wrench  FunctionWithArgument.wrench  Indexing.wrench  Math.wrench  MiddlePipe.wrench  PartialImport.wrench  PipeAssignment.wrench  Recursion.wrench  SimpleForIn.wrench  SimpleFunction.wrench  SimpleMath.wrench  SimplePipe.wrench  TableIndex.wrench  TypeChecker.wrench  WhileLoop.wrench
programs/UAT/: UAT.wrench  UAT_ForsikringFilter.wrench  UAT_Pipe.wrench  skader.csv
programs/anti_programs/: ConstReassign.wrench  IllegalArrayIndex.wrench  IllegalFunctionReturn.wrench  IllegalTableImport.wrench  TypeChecker.wrench
programs/data/: stock.csv
ptree/: Cargo.toml
ptree/src/: ast.rs  calculator4.lalrpop  main.rs  token.rs
src/: grammar.lalrpop  main.rs
src/backend/: backend.rs  environment.rs  evaluate.rs  library.rs  mod.rs  pipes.rs  table.rs  todo.md
src/frontend/: ast.rs  frontend.rs  lexer.rs  main.rs  mod.rs  typecheck.rs
src/interpreter/: wrench.lalrpop
